# godot-snake

./: .gitignore  Head.gd  README.md  apple.gd  apple.tscn  body.gd  body.tscn  game_manager.gd  game_manager.tscn  head.tscn  index.html  index.pck  main_scene.tscn  project.godot  ui.gd  ui.tscn
.github/workflows/: godot-ci.yaml
assets/: apple.png.import  body.png.import  body_bottomleft.png.import  body_bottomright.png.import  body_horizontal.png.import  body_topleft.png.import  body_topright.png.import  body_vertical.png.import  eat_rare1.wav.import  eat_rare2.wav.import  head.png.import  head_down.png.import  head_left.png.import  head_right.png.import  head_up.png.import  tail_down.png.import  tail_left.png.import  tail_right.png.import  tail_up.png.import
backend/: Cargo.toml
backend/src/: main.rs
game/: Head.gd  apple.gd  body.tscn  export_presets.cfg  game_manager.gd  game_manager.tscn  head.tscn  icon.svg.import  project.godot  ui.gd  ui.tscn
game/assets/: dead_head.png.import  eat1.wav.import  eat2.wav.import  eat3.wav.import
