[package]
name = "snake-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.10"
sled = "0.34"
once_cell = "1"
serde_json = "1"
uuid = { version = "1" , features = ["v4"]}
serde = { version = "1" ,features = ["derive"]}
cfg-if = "1"
anyhow = "1"
actix-cors = "0.7"
